--- a/protein_redesign.html
+++ b/protein_redesign.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Header -->
     <header class="text-center">
-        <img src="your-photo.jpg" alt="Yehor Franchuk" class="profile-photo mb-2">
+        <img src="your-photo.png" alt="Yehor Franchuk" class="profile-photo mb-2">
         <h1 data-lang="title">Yehor Franchuk</h1>
         <p data-lang="subtitle">Founder & CEO of YID</p>
     </header>
@@ -46,7 +46,7 @@
                     <div class="photo-gallery mb-3 animate__fadeIn">
                         <div class="row justify-content-center">
                             <div class="col-md-3 text-center">
-                                <img src="poster1.jpg" alt="Protein Redesign Poster 1" class="gallery-photo">
+                                <img src="poster1.png" alt="Protein Redesign Poster 1" class="gallery-photo">
                             </div>
                         </div>
                     </div>
@@ -58,7 +58,7 @@
                         <div class="photo-gallery mb-3">
                             <div class="row justify-content-center">
                                 <div class="col-md-3 text-center">
-                                    <img src="tree.jpg" alt="Phylogenetic Tree" class="gallery-photo">
+                                    <img src="tree.png" alt="Phylogenetic Tree" class="gallery-photo">
                                 </div>
                             </div>
                         </div>
@@ -74,7 +74,7 @@
                         <div class="photo-gallery mb-3">
                             <div class="row justify-content-center">
                                 <div class="col-md-3 text-center">
-                                    <img src="domain.jpg" alt="START Domain" class="gallery-photo">
+                                    <img src="domain.png" alt="START Domain" class="gallery-photo">
                                 </div>
                             </div>
                         </div>
@@ -84,7 +84,7 @@
                         <div class="photo-gallery mb-3">
                             <div class="row justify-content-center">
                                 <div class="col-md-3 text-center">
-                                    <img src="msa.jpg" alt="Multiple Sequence Alignment" class="gallery-photo">
+                                    <img src="msa.png" alt="Multiple Sequence Alignment" class="gallery-photo">
                                     <p class="mt-2">RMSD score = 0.154</p>
                                 </div>
                             </div>
@@ -110,11 +110,11 @@
                         <div class="photo-gallery mb-3">
                             <div class="row justify-content-center">
                                 <div class="col-md-3 text-center">
-                                    <img src="rank1.jpg" alt="AlphaFold Scoring 1" class="gallery-photo">
+                                    <img src="rank1.png" alt="AlphaFold Scoring 1" class="gallery-photo">
                                     <p class="mt-2">T = 0.1, pTM = 0.9</p>
                                 </div>
                                 <div class="col-md-3 text-center">
-                                    <img src="rank2.jpg" alt="AlphaFold Scoring 2" class="gallery-photo">
+                                    <img src="rank2.png" alt="AlphaFold Scoring 2" class="gallery-photo">
                                     <p class="mt-2">T = 0.1, pTM = 0.9</p>
                                 </div>
                             </div>
@@ -125,7 +125,7 @@
                         <div class="photo-gallery mb-3">
                             <div class="row justify-content-center">
                                 <div class="col-md-3 text-center">
-                                    <img src="dock.jpg" alt="Docking Result" class="gallery-photo">
+                                    <img src="dock.png" alt="Docking Result" class="gallery-photo">
                                 </div>
                             </div>
                         </div>
@@ -135,7 +135,7 @@
                         <div class="photo-gallery mb-3">
                             <div class="row justify-content-center">
                                 <div class="col-md-3 text-center">
-                                    <img src="pocket.jpg" alt="Binding Pocket" class="gallery-photo">
+                                    <img src="pocket.png" alt="Binding Pocket" class="gallery-photo">
                                 </div>
                             </div>
                         </div>
@@ -145,7 +145,7 @@
                         <div class="photo-gallery mb-3">
                             <div class="row justify-content-center">
                                 <div class="col-md-3 text-center">
-                                    <img src="dynam.jpg" alt="Molecular Dynamics" class="gallery-photo">
+                                    <img src="dynam.png" alt="Molecular Dynamics" class="gallery-photo">
                                 </div>
                             </div>
                         </div>
@@ -155,10 +155,10 @@
                         <div class="photo-gallery mb-3">
                             <div class="row justify-content-center">
                                 <div class="col-md-3 text-center">
-                                    <img src="scoring.jpg" alt="Scoring Metrics" class="gallery-photo">
+                                    <img src="scoring.png" alt="Scoring Metrics" class="gallery-photo">
                                 </div>
                                 <div class="col-md-3 text-center">
-                                    <img src="stab.jpg" alt="Stability Metrics" class="gallery-photo">
+                                    <img src="stab.png" alt="Stability Metrics" class="gallery-photo">
                                 </div>
                             </div>
                         </div>
@@ -166,14 +166,14 @@
                     <div class="photo-gallery mb-3 animate__fadeIn">
                         <div class="row justify-content-center">
                             <div class="col-md-3 text-center">
-                                <img src="poster2.jpg" alt="Protein Redesign Poster 2" class="gallery-photo">
+                                <img src="poster2.png" alt="Protein Redesign Poster 2" class="gallery-photo">
                             </div>
                         </div>
                     </div>
                     <div class="photo-gallery mb-3 animate__fadeIn">
                         <div class="row justify-content-center">
                             <div class="col-md-3 text-center">
-                                <img src="poster3.jpg" alt="Protein Redesign Poster 3" class="gallery-photo">
+                                <img src="poster3.png" alt="Protein Redesign Poster 3" class="gallery-photo">
                             </div>
                         </div>
                     </div>
