--- a/protein_redesign.html
+++ b/protein_redesign.html
@@ -46,7 +46,7 @@
                     <div class="photo-gallery mb-3 animate__fadeIn">
                         <div class="row justify-content-center">
                             <div class="col-md-3 text-center">
-                                <img src="poster1.png" alt="Protein Redesign Poster 1" class="gallery-photo">
+                                <img src="poster1.jpg" alt="Protein Redesign Poster 1" class="gallery-photo">
                             </div>
                         </div>
                     </div>
@@ -166,14 +166,14 @@
                     <div class="photo-gallery mb-3 animate__fadeIn">
                         <div class="row justify-content-center">
                             <div class="col-md-3 text-center">
-                                <img src="poster2.png" alt="Protein Redesign Poster 2" class="gallery-photo">
+                                <img src="poster2.jpg" alt="Protein Redesign Poster 2" class="gallery-photo">
                             </div>
                         </div>
                     </div>
                     <div class="photo-gallery mb-3 animate__fadeIn">
                         <div class="row justify-content-center">
                             <div class="col-md-3 text-center">
-                                <img src="poster3.png" alt="Protein Redesign Poster 3" class="gallery-photo">
+                                <img src="poster3.jpg" alt="Protein Redesign Poster 3" class="gallery-photo">
                             </div>
                         </div>
                     </div>
