--- a/protein_redesign.html
+++ b/protein_redesign.html
@@ -11,7 +11,7 @@
 <body>
     <!-- Header -->
     <header class="text-center">
-        <img src="your-photo.png" alt="Yehor Franchuk" class="profile-photo mb-2">
+        <img src="your-photo.jpg" alt="Yehor Franchuk" class="profile-photo mb-2">
         <h1 data-lang="title">Yehor Franchuk</h1>
         <p data-lang="subtitle">Founder & CEO of YID</p>
     </header>
