--- a/protein_redesign.html
+++ b/protein_redesign.html
@@ -25,7 +25,7 @@
                 <li><a href="#" data-page="yid.html" class="nav-button">YID</a></li>
                 <li><a href="https://baza14.bezpekaservice.com.ua/" target="_blank"><img src="icons/YID.png" alt="YID" class="nav-icon"></a></li>
                 <li><a href="#" data-page="news.html" class="nav-button">News</a></li>
-                <li><a href="#" data-page="protein_redesign.html" class="nav-button">Protein Redesign</a></li
+                <li><a href="#" data-page="protein_redesign.html" class="nav-button">Protein Redesign</a></li>
             </ul>
             <ul class="social-links">
                 <li><a href="https://scholar.google.com/citations?user=uJxYzSQAAAAJ&hl=uk&authuser=1" target="_blank"><img src="icons/google-scholar.png" alt="Google Scholar"></a></li>
