--- a/protein_redesign.html
+++ b/protein_redesign.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>YID - Protein Redesign</title>
+    <title>FAZENA - Protein Redesign</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="dna-icon.png" type="image/x-icon">
@@ -13,7 +13,7 @@
     <header class="text-center">
         <img src="your-photo.jpg" alt="Yehor Franchuk" class="profile-photo mb-2">
         <h1 data-lang="title">Yehor Franchuk</h1>
-        <p data-lang="subtitle">Founder & CEO of YID</p>
+        <p data-lang="subtitle">Co-founder & CEO of FAZENA</p>
     </header>
 
     <!-- Navigation -->
@@ -22,8 +22,8 @@
             <button class="burger-menu" aria-label="Toggle menu">☰</button>
             <ul class="nav-links">
                 <li><a href="#" data-page="index.html" class="nav-button">Home</a></li>
-                <li><a href="#" data-page="yid.html" class="nav-button">YID</a></li>
-                <li><a href="https://baza14.bezpekaservice.com.ua/" target="_blank"><img src="icons/YID.png" alt="YID" class="nav-icon"></a></li>
+                <li><a href="#" data-page="FAZENA.html" class="nav-button">FAZENA</a></li>
+                <li><a href="https://baza14.bezpekaservice.com.ua/" target="_blank"><img src="icons/FAZENA.png" alt="FAZENA" class="nav-icon"></a></li>
                 <li><a href="#" data-page="news.html" class="nav-button">News</a></li>
                 <li><a href="#" data-page="protein_redesign.html" class="nav-button">Protein Redesign</a></li>
             </ul>
